ingress-demo-deploy-v2 -.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: nginx
  name: ingress-demo-deploy-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      run: ingress-demo-deploy-v2
  template:
    metadata:
      labels:
        run: ingress-demo-deploy-v2
    spec:
      volumes:
      - name: webdata
        emptyDir: {}
      containers:
      - image: nginx
        name: nginx
        volumeMounts:
        - name: webdata
          mountPath: "/usr/share/nginx/html"
