ingress-resource-demo.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: ingress-resource-demo
spec:
  tls:
  - hosts:
    - ingress.shaikabdulrayyan.com
    secretName: wildcard-shaikabdulrayyanrayyan-com-tls
  rules:
  - host: ingress.shaikabdulrayyan.com
    http:
      paths:
      - path: /
        backend:
          serviceName: ingress-demo-deploy-v1
          servicePort: 80
      - path: /v2
        backend:
          serviceName: ingress-demo-deploy-v2
          servicePort: 80
